--- a/FinalChallenge/FinalChallenge/Base.lproj/Main.storyboard
+++ b/FinalChallenge/FinalChallenge/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nKE-Kh-ZdC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oRX-qd-2KL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,11 +28,68 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="881" y="791"/>
+            <point key="canvasLocation" x="25" y="1053"/>
+        </scene>
+        <!--Finder-->
+        <scene sceneID="8zx-9Y-dDR">
+            <objects>
+                <viewController id="8ZO-KW-Qei" customClass="FinderViewController" customModule="FinalChallenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="s1I-FP-0ds"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZO2-iV-7rL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jRl-PW-R2k">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Finder" id="8Kj-HP-Mbx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wV3-Ql-EYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2546" y="1119"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="UUl-zT-aQR">
+            <objects>
+                <viewController id="O8s-wq-0o9" customClass="ProfileViewController" customModule="FinalChallenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1pD-Rr-gBu"/>
+                        <viewControllerLayoutGuide type="bottom" id="dIF-Kg-1jm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4H1-K2-DDX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" selectedImage="profile1" id="pHh-Z3-d7e"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5PW-j2-Nfz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2546" y="463"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="dAh-43-Zze">
+            <objects>
+                <tabBarController id="oRX-qd-2KL" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="StM-Kq-q1c">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="O8s-wq-0o9" kind="relationship" relationship="viewControllers" id="pwu-aB-AOA"/>
+                        <segue destination="8ZO-KW-Qei" kind="relationship" relationship="viewControllers" id="cnE-e9-56a"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UPJ-cN-pdN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1593" y="789"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kGR-SF-YiQ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aQc-8k-Stf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nKE-Kh-ZdC" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Iu3-OC-g2p">
@@ -44,9 +101,11 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ORq-Fk-ydz"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aQc-8k-Stf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133.59999999999999" y="791.15442278860576"/>
+            <point key="canvasLocation" x="26" y="289"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="profile1" width="40" height="40"/>
+    </resources>
 </document>
